k8s/infra/argo-rollouts-dashboard/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-rollouts-dashboard
  namespace: argo-rollouts
spec:
  parentRefs:
    - name: kong-gateway
      namespace: talana-dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /argo-rollouts
      backendRefs:
        - name: argo-rollouts-dashboard
          port: 3100
